terminal: fix the display of the scrollbar
the commit fixes the display of the scrollbar which was small and even
hidden at small viewports due to the padding.

--- a/packages/terminal/src/browser/style/terminal.css
+++ b/packages/terminal/src/browser/style/terminal.css
@@ -17,7 +17,8 @@
 .terminal-container {
     width:100%;
     height:100%;
-    padding: var(--theia-code-padding);
+    padding-top: var(--theia-code-padding);
+    padding-bottom: var(--theia-code-padding);
     background: var(--theia-terminal-background);
 }
 
